deploy: 2bd07ec1ed580f76854c98dfaeab031825646f52

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Jörg M. Steiner</span>
                     </div>
                 </div>
                 </div>
-<h2><i class='fas fa-paw'></i> Journal of Small Animal Practice</h2>
+<h2><i class='fas fa-paw'></i> Jorunal of Small Animal Practice</h2>
 <div class='article-list'>
 
                 <div class="article-card">
@@ -268,7 +268,7 @@ S. D. Stewart</span>
                 </div>
 <h2><i class='fas fa-paw'></i> Journal of Feline Medicine and Surgery</h2>
 <div class='article-list'>
-<div class='article-card error'>フィード取得中にタイムアウトまたはネットワークエラーが発生しました。</div></div>
+<div class='article-card no-update'>新しい論文はありませんでした。</div></div>
 <h2><i class='fas fa-paw'></i> American Journal of Veterinary Research</h2>
 <div class='article-list'>
 <div class='article-card no-update'>新しい論文はありませんでした。</div></div>
@@ -445,6 +445,6 @@ S. D. Stewart</span>
 <div class='article-list'>
 <div class='article-card error'>フィード取得中にタイムアウトまたはネットワークエラーが発生しました。</div></div>
 
-    <p class="update-time">最終更新: 2025-07-16 05:49:50 JST</p>
+    <p class="update-time">最終更新: 2025-07-16 06:01:44 JST</p>
     </div></body></html>
     
